--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical" >
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -50,7 +50,19 @@
                 android:layout_marginTop="50dp"
 
                 android:drawableLeft="@drawable/icons8_map_pin_100"
+
                 android:drawableRight="@drawable/label" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/control_buttons_dark_shape_button"
+
+                 />
         </LinearLayout>
 
 
