--- a/app/src/main/res/layout/auth_wind.xml
+++ b/app/src/main/res/layout/auth_wind.xml
@@ -5,7 +5,8 @@
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:padding="10dp"
-    android:background="@drawable/comp34">
+
+    android:theme="@style/Theme.AppCompat.DayNight.Dialog.MinWidth">
 
     <TextView
         android:id="@+id/textView1"
