--- a/app/src/main/res/layout/activity_banks_activity.xml
+++ b/app/src/main/res/layout/activity_banks_activity.xml
@@ -18,6 +18,7 @@
             android:text="Банки" />
 
         <ListView
+            android:id="@+id/banks"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
